[gd_scene load_steps=13 format=3 uid="uid://bubvxo4ssoxca"]

[ext_resource type="Script" path="res://Scripts/shop.gd" id="1_7i3mk"]
[ext_resource type="Texture2D" uid="uid://ddaulhq7oup66" path="res://Sprites/BG/ShopScrenn_light_green_bg.png" id="2_31u26"]
[ext_resource type="FontFile" uid="uid://dgsdwbgcyr2gf" path="res://dogicapixelbold.ttf" id="2_pg2k5"]
[ext_resource type="StyleBox" uid="uid://b8cjswdjawi40" path="res://Styling/button.tres" id="3_xcwcu"]
[ext_resource type="StyleBox" uid="uid://2l7nww6tbl2g" path="res://Styling/buttonPressed.tres" id="4_dgipw"]
[ext_resource type="Texture2D" uid="uid://c8aeaje2ec0fj" path="res://Sprites/Item/EnergyDrink_Button.png" id="6_f1fyq"]
[ext_resource type="Script" path="res://Scripts/MoneyCount.gd" id="7_a2mos"]
[ext_resource type="Texture2D" uid="uid://chenl2getxr8f" path="res://Sprites/Item/StonkCoin_Button.png" id="7_e3n53"]
[ext_resource type="AudioStream" uid="uid://c1nlw06pfn1s1" path="res://Sounds/ByingItems.mp3" id="8_yt3qi"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mw8m7"]
size = Vector2(122.5, 129.75)

[sub_resource type="LabelSettings" id="LabelSettings_j6t36"]
font_size = 32
font_color = Color(3.56168e-06, 0.615319, 1.73271e-06, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u7x2k"]
size = Vector2(120, 125.5)

[node name="Shop" type="Node2D"]
script = ExtResource("1_7i3mk")

[node name="BG" type="Sprite2D" parent="."]
position = Vector2(577.5, 325.5)
scale = Vector2(2.08094, 1.90828)
texture = ExtResource("2_31u26")

[node name="Next Level" type="Button" parent="."]
offset_left = 500.0
offset_top = 442.0
offset_right = 644.0
offset_bottom = 466.0
scale = Vector2(1.183, 2.06974)
theme_override_fonts/font = ExtResource("2_pg2k5")
theme_override_font_sizes/font_size = 0
theme_override_styles/normal = ExtResource("3_xcwcu")
theme_override_styles/hover = ExtResource("3_xcwcu")
theme_override_styles/pressed = ExtResource("4_dgipw")
theme_override_styles/focus = ExtResource("3_xcwcu")
text = "Next Level
"
metadata/_edit_use_anchors_ = true

[node name="Items" type="Node2D" parent="."]

[node name="EnergyDrink_Area" type="Area2D" parent="Items"]

[node name="EnergySprite" type="Sprite2D" parent="Items/EnergyDrink_Area"]
texture_filter = 1
position = Vector2(416.32, 274.736)
scale = Vector2(1.64468, 1.70744)
texture = ExtResource("6_f1fyq")

[node name="Energy_CollisionShape2D" type="CollisionShape2D" parent="Items/EnergyDrink_Area"]
position = Vector2(416.39, 274.125)
shape = SubResource("RectangleShape2D_mw8m7")

[node name="Energy_Label" type="Label" parent="Items/EnergyDrink_Area"]
offset_left = 350.0
offset_top = 347.0
offset_right = 482.0
offset_bottom = 395.0
theme_override_fonts/font = ExtResource("2_pg2k5")
text = "$150"
label_settings = SubResource("LabelSettings_j6t36")
horizontal_alignment = 1

[node name="Stonks_Area" type="Area2D" parent="Items"]

[node name="StonksSprite" type="Sprite2D" parent="Items/Stonks_Area"]
texture_filter = 1
position = Vector2(744.811, 273.041)
scale = Vector2(1.60547, 1.68938)
texture = ExtResource("7_e3n53")

[node name="Stonks_CollisionShape2D" type="CollisionShape2D" parent="Items/Stonks_Area"]
position = Vector2(744.811, 272.291)
shape = SubResource("RectangleShape2D_u7x2k")

[node name="Stonks_Label" type="Label" parent="Items/Stonks_Area"]
offset_left = 681.0
offset_top = 345.0
offset_right = 813.0
offset_bottom = 393.0
theme_override_fonts/font = ExtResource("2_pg2k5")
text = "$400"
label_settings = SubResource("LabelSettings_j6t36")
horizontal_alignment = 1

[node name="VBoxContainerLeft" type="VBoxContainer" parent="."]
offset_left = 144.0
offset_top = 48.0
offset_right = 184.0
offset_bottom = 88.0

[node name="MoneyLabel" type="Label" parent="VBoxContainerLeft"]
self_modulate = Color(0.239216, 0.2, 0.2, 1)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_pg2k5")
script = ExtResource("7_a2mos")
metadata/_edit_use_anchors_ = true

[node name="BuyingItems" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_yt3qi")

[connection signal="pressed" from="Next Level" to="." method="_on_skip_level_pressed"]
[connection signal="input_event" from="Items/EnergyDrink_Area" to="." method="_on_energy_drink_input_event"]
[connection signal="input_event" from="Items/Stonks_Area" to="." method="_on_stonks_area_input_event"]
